--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,17 @@
 old/
 __pycache__/
 .claude
+upgrade_files_*/
 
 # 忽略特定文件
 config.toml
+config.toml.backup
+*.backup
 .env
 nul
+
+# 忽略升级包压缩文件
+upgrade_files_*.zip
 
 # 忽略特定扩展名的文件（递归）
 **/*.tmp
