--- a/_manifest.json
+++ b/_manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 1,
   "name": "自定义智能多模型图片生成插件（custom_pic_plugin）",
-  "version": "3.3.4",
-  "description": "智能多模型图片生成插件，支持文生图和图生图自动识别。兼容OpenAI、豆包、Gemini、魔搓等多种 API格式。提供命令式风格转换、模型配置管理、结果缓存等功能。支持动态模型切换、风格别名、调试开关、智能参考搜索等高级特性。",
+  "version": "3.4.0",
+  "description": "智能多模型图片生成插件，支持文生图和图生图自动识别。兼容OpenAI、豆包、Gemini、魔搭等多种API格式。提供命令式风格转换、模型配置管理、结果缓存等功能。支持动态模型切换、风格别名、调试开关、智能参考搜索（内置搜索引擎）等高级特性。内置7个魔搭模型预设。",
   "author": {
-    "name": "Ptrel，Rabbit-Jia-Er，saberlights Kiuon",
+    "name": "Ptrel，Rabbit-Jia-Er，saberlights Kiuon，NGU-SprinG",
     "url": "https://github.com/1021143806/custom_pic_plugin"
   },
-  "license": "GPL-v3.0-or-later",
+  "license": "AGPL-3.0",
   "host_application": {
     "min_version": "0.10.0"
   },
@@ -17,7 +17,8 @@
     "draw",
     "Expression",
     "ai",
-    "image"
+    "image",
+    "modelscope"
   ],
   "categories": [
     "Expression",
@@ -68,14 +69,16 @@
     ],
     "features": [
       "智能文生图/图生图识别",
-      "多 API格式支持(OpenAI/豆包/Gemini/魔搓)",
+      "多API格式支持(OpenAI/豆包/Gemini/魔搭)",
       "命令式风格转换",
       "动态模型配置管理",
       "风格别名系统",
       "结果缓存机制",
       "调试开关控制",
       "支持图生图开关",
-      "智能参考搜索功能"
+      "智能参考搜索功能（内置Bing搜图）",
+      "自拍模式标准/对镜双模式负面提示词",
+      "内置7个魔搭模型预设"
     ]
   },
   "id": "1021143806.custom_pic_plugin"
