--- a/_manifest.json
+++ b/_manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 1,
   "name": "自定义智能多模型图片生成插件（custom_pic_plugin）",
   "version": "3.4.0",
-  "description": "智能多模型图片生成插件，支持文生图和图生图自动识别。兼容OpenAI、豆包、Gemini、魔搭等多种API格式。提供命令式风格转换、模型配置管理、结果缓存等功能。支持动态模型切换、风格别名、调试开关、智能参考搜索（内置搜索引擎）等高级特性。内置7个魔搭模型预设。",
+  "description": "智能多模型图片生成插件，支持文生图和图生图自动识别。兼容OpenAI、豆包、Gemini、魔搭等多种API格式。提供命令式风格转换、模型配置管理、结果缓存等功能。支持动态模型切换、风格别名、调试开关、智能参考搜索（内置搜索引擎）等高级特性。内置7个魔搭模型预设。本插件完全符合 MaiBot 插件开发标准。",
   "author": {
     "name": "Ptrel，Rabbit-Jia-Er，saberlights Kiuon，NGU-SprinG",
     "url": "https://github.com/1021143806/custom_pic_plugin"
@@ -21,8 +21,8 @@
     "modelscope"
   ],
   "categories": [
-    "Expression",
-    "Picture"
+    "Content Generation",
+    "Entertainment & Interaction"
   ],
   "default_locale": "zh-CN",
   "locales_path": "_locales",
@@ -80,6 +80,5 @@
       "自拍模式标准/对镜双模式负面提示词",
       "内置7个魔搭模型预设"
     ]
-  },
-  "id": "1021143806.custom_pic_plugin"
+  }
 }
