--- a/_manifest.json
+++ b/_manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 1,
   "name": "自定义智能多模型图片生成插件（custom_pic_plugin）",
-  "version": "3.5.0-beta.5",
-  "description": "智能多模型图片生成插件，支持文生图和图生图自动识别。兼容OpenAI、豆包、Gemini、魔搭等多种API格式。v3.5.0-beta.5移除character_name和character_persona配置项，完全使用selfie.prompt_prefix保证人设稳定性。内置7个魔搭模型预设。本插件完全符合 MaiBot 插件开发标准。",
+  "version": "3.5.0-beta.6",
+  "description": "智能多模型图片生成插件，支持文生图和图生图自动识别。兼容OpenAI、豆包、Gemini、魔搭等多种API格式。v3.5.0-beta.6新增人设注入功能，配文和日程生成都支持自定义人设，让配文更符合角色设定。内置7个魔搭模型预设。本插件完全符合 MaiBot 插件开发标准。",
   "author": {
     "name": "Ptrel，Rabbit-Jia-Er，saberlights Kiuon，nguspring",
     "url": "https://github.com/nguspring/custom_pic_plugin"
